# cuip_bevfusion_bag_connectivity

./: README.md  package.xml  setup.cfg  setup.py
launch/: bevfusion_bag_connectivity.launch.py
