<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cuip_bevfusion_bag_connectivity</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="omercandurmuss@gmail.com">omer</maintainer>
  <license>TODO: License declaration</license>

  <!-- Python launch runtime -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Nodes we start directly -->
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Packages whose launch files we include -->
  <exec_depend>autoware_bevfusion</exec_depend>
  <exec_depend>ouster_point_type_adapter</exec_depend>
  <exec_depend>autoware_pointcloud_preprocessor</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
